# bookish-memory

./: .env.local.example  .gitignore  FEATURES.md  Makefile  README.md  eval.meta.json  pyproject.toml
.github/: template-cleanup.md
.github/workflows/: checks.yml  post-run-analysis.yml
eval/: EVALUATION.md  PROMPT.md  eval.config.example.json
eval/scripts/: _common.py  collapse.py  commit_size.py  complexity_trend.py  coverage_trend.py  duplication_trend.py  live_sync_check.py  regression_count.py
src/matrixtui/: __init__.py  __main__.py  app.py  config.py  matrix_client.py
tests/: conftest.py  test_app.py  test_config.py  test_integration.py  test_matrix_client.py
